--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="54f1b193-5e60-4322-bb66-49d7599842ad" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Sai Aakash - ML & AI Engineer" />
+    <meta property="og:description" content="Portfolio of Sai Aakash - Machine Learning, LLM & AI Engineer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/profile-photo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@saiaakash" />
+    <meta name="twitter:image" content="/profile-photo.png" />
   </head>
 
   <body>
