--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <title>Sai Aakash - ML & AI Engineer</title>
     <meta name="description" content="Portfolio of Sai Aakash - Machine Learning, LLM & AI Engineer" />
     <meta name="author" content="Sai Aakash" />
+    
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#0a0a0a" />
+    
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Sai Aakash - ML & AI Engineer" />
     <meta property="og:description" content="Portfolio of Sai Aakash - Machine Learning, LLM & AI Engineer" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/profile-photo.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@saiaakash" />
     <meta name="twitter:image" content="/profile-photo.png" />
